--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # Compiled output
-/dist
-/tmp
-/out-tsc
-/bazel-out
+**/dist
+**/tmp
+**/out-tsc
+**/bazel-out
 
 # Node
-/node_modules
+**/node_modules
 npm-debug.log
 yarn-error.log
 
@@ -20,22 +20,14 @@ yarn-error.log
 .settings/
 *.sublime-workspace
 
-# Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
 # Miscellaneous
-/.angular/cache
+**/.angular/cache
 .sass-cache/
-/connect.lock
-/coverage
-/libpeerconnection.log
+**/connect.lock
+**/coverage
+**/libpeerconnection.log
 testem.log
-/typings
+**/typings
 
 # System files
 .DS_Store
